# gev

./: .clang-format  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  Readme.md
cmake/: AddShaderPackage.cmake  GenerateSource.cmake
cmake/templates/: shader.cpp  shader.h
executables/01_test/: 01_test.cpp  CMakeLists.txt  blur.cpp  blur.hpp  camera.cpp  camera.hpp  collision_masks.hpp  ddf_generator.cpp  ddf_generator.hpp  entity_ids.hpp  environment.cpp  environment.hpp  environment_shader.cpp  environment_shader.hpp  gltf_loader.cpp  gltf_loader.hpp  main_controls.hpp  object.cpp  object.hpp  post_process.cpp  post_process.hpp  registry.hpp  test01.aps  texture.cpp  texture.hpp
executables/01_test/components/: bone_component.cpp  bone_component.hpp  camera_component.cpp  camera_component.hpp  camera_controller.cpp  camera_controller.hpp  camera_controller_component.cpp  camera_controller_component.hpp  debug_ui_component.cpp  debug_ui_component.hpp  ground_component.cpp  ground_component.hpp  remote_controller_component.cpp  remote_controller_component.hpp  renderer_component.cpp  renderer_component.hpp  shadow_map_component.cpp  shadow_map_component.hpp  skin_component.cpp  skin_component.hpp  sound_component.cpp  sound_component.hpp
executables/01_test/shaders/: blur.comp  cube_diffuse.frag  cube_environment.geom  cube_environment.vert  draw_ddf.frag  environment.frag  environment.vert  generate_distance_field.comp  grass.frag  grass.vert  shader.frag  shader.vert  ui.frag  ui.vert
